# fiat-prices-aggregator

./: .env.sample  .gitignore  Cargo.toml  README.md  cron.sh
src/: main.rs  models.rs  shared.rs
src/api/: binance.rs  buda.rs  cripto_ya.rs  mercado_bitcoin.rs  mod.rs  shared.rs  yadio.rs
src/fiat/: ars.rs  brl.rs  clp.rs  cop.rs  mod.rs  mxn.rs  usd.rs  ves.rs
