[package]
name = "local-money-fiat-price-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cosmwasm-std = "1.1.5"
cosmrs = "0.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
tokio-cron-scheduler = "0.8.1"
