[package]
name = "local-money-fiat-price-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
average = "0.13.1"
anyhow = "1.0.65"
base64 = "0.13.1"
bip39 = "1.0.1"
cosmrs = { version = "0.9.0", features = ["cosmwasm", "rpc"] }
cosmwasm-std = "1.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
rust_decimal = "1.26.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
localterra-protocol = { git = "https://github.com/Local-Money/localmoney", branch = "feature/local-784-fiat-price-to-price-source" }
